--- a/README
+++ b/README
@@ -1,2 +1,15 @@
-testing out git as i've never used it
-before, well properly....
+# Gmail Notify #
+
+Very Basic PHP Gmail Notifier
+
+## example usage ##
+
+Just uncomment either 
+```php
+//exec("notify-send -u normal 'You have $content emails '");
+or 
+exec("espeak -v whisper 'You have $content new message'"); 
+```
+## Thanks ##
+
+To my original perl script :)
