--- a/README
+++ b/README
@@ -1,15 +1,16 @@
-# Gmail Notify #
-
+Gmail Notify
+-----------------------------
 Very Basic PHP Gmail Notifier
 
-## example usage ##
+Example usage
+-----------------------------
 
-Just uncomment either 
-```php
+Just uncomment either:
+
 //exec("notify-send -u normal 'You have $content emails '");
 or 
 exec("espeak -v whisper 'You have $content new message'"); 
-```
-## Thanks ##
 
+Thanks
+-----------------------------
 To my original perl script :)
